applications/my-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: applications
  labels:
    app.kubernetes.io/managed-by: argocd
